--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,4 +3,21 @@
 
 @import "{{ site.theme }}";
 
+.main-content {
+h1 {
+ color: #800080;
+ }
+}
+
+.page-header{
+color: #ffd700;
+
+background-image: linear-gradient(120deg, rgba(217, 11, 217, 0), rgba(128, 0,128, 1)),
+                  url("{{ site.baseurl }}/assets/images/header.jpeg");
+
+background-size: cover;
+background-repeat: no-repeat;
+
+
+}
 
