--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,13 @@ h1 {
  }
 }
 
+.page-header {
+h1 {
+ color: #ffd700;
+}
+}
 .page-header{
-color: #ffd700;
+
 
 background-image: linear-gradient(120deg, rgba(217, 11, 217, 0), rgba(128, 0,128, 1)),
                   url("{{ site.baseurl }}/assets/images/header-2.jpeg");
