--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>     
+     <div class="btn"><a>Tools</a> </div>
+     <div class="btn"> <a>Designs</a> </div>
+     <div class="btn"> <a>Stores</a> </div>
+     <div class="btn"> <a>Social</a> </div>
     </header>
 
     <main id="content" class="main-content" role="main">
