--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,24 @@ background-size: cover;
 width: 100%;
 height: 100%;
 background-repeat: no-repeat;
-
-
 }
 
+a {
+  color: #800080;
+  text-decoration: none;
+ font-weight: bold;
+
+  &:hover {
+    text-decoration: underline;
+    color: #ffd700;
+  }
+}
+
+
+.btn {
+  
+  background-color: rgba(255, 215, 0, 0.5);
+&:hover {
+ color:rgba(255, 215, 0, 0.5);
+}
+}
