--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -23,11 +23,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>     
-     <div class="btn"><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a> </div>
-     <div class="btn"><a href="tools.html">Tools</a> </div>
-     <div class="btn"> <a href="designs.html">Designs</a> </div>
-     <div class="btn"> <a href="stores.html">Stores</a> </div>
-     <div class="btn"> <a href="social.html">Social</a> </div>
+     <div class="btn"><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i></a> </div>
+     <div class="btn"><a href="../tools.html">Tools</a> </div>
+     <div class="btn"> <a href="../designs.html">Designs</a> </div>
+     <div class="btn"> <a href="../stores.html">Stores</a> </div>
+     <div class="btn"> <a href="../social.html">Social</a> </div>
     </header>
 
     <main id="content" class="main-content" role="main">
